prevent horizontal scroll

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,7 @@
 body {
   background-color: #080808;
   color: rgb(250, 250, 250);
+  overflow-x: hidden;
 }
 
 .gray {
